public class App {
    public static void main(String[] args) {
        new Interfaz().mostrarMenu();
    }
}