public class Nodo {
    public Suscriptor dato;
    public Nodo siguiente;

    public Nodo(Suscriptor dato) {
        this.dato = dato;
    }
}